[package]
name = "wl-codegen"
version = "0.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
toml = { version = "0.5" }
heck = "0.4.0"

syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"