[package]
name = "yutani-codegen"
version = "0.0.0"
description = "Code generation of protocol dispatch glue for Yutani."
edition = "2021"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/AidoP/yutani-codegen"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
toml = { version = "0.5" }
heck = "0.4.0"

syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"